<resources>
    <string name="app_name">fl0wer</string>

    <!-- Permission. -->
    <string name="permission_text">Пожалуйста, выдайте разрешение на чтение списка контактов для правильной работы приложения.</string>
    <string name="request_permission">Запросить разрешение</string>

    <!-- Contacts. -->
    <string name="contacts_list">Список контактов</string>
    <string name="contact_details">Детали контакта</string>
    <string name="phone_main">Основной</string>
    <string name="phone_mobile">Мобильный</string>
    <string name="email_main">E-mail</string>
    <string name="email_secondary">Доп. E-mail</string>
    <string name="notes">Заметки</string>
    <string name="birthday">День рождения</string>
    <string name="notice_birthday_name">Напоминание о дне рождения</string>
    <string name="birthday_notice">Сегодня празднует день рождения %s</string>
    <string name="search_title">Имя</string>
</resources>
